--- a/content_security_policy/locale/en_US/LC_MESSAGES/content_security_policy.pot
+++ b/content_security_policy/locale/en_US/LC_MESSAGES/content_security_policy.pot
@@ -1,5 +1,3 @@
-#. Content-Type: text/plain; charset=UTF-8
-#. Copyright 2019 Daniel Pimley and other contributors.
 #. This file is distributed under the same license as the Chyrp Lite package.
 
 #: modules/content_security_policy/info.php:3
@@ -7,6 +5,6 @@ msgid "Content Security Policy"
 msgstr ""
 
 #: modules/content_security_policy/info.php:6
-msgid "Adds a Content-Security-Policy header to the blog."
+msgid "Adds a strict Content-Security-Policy header to the blog."
 msgstr ""
 
